Following Concepts are learnt will developing this app: 1. Taking requests from a url 2. Staring a Session 3. Dispatching a Queue form a task

--- a/Whats The Weather/Base.lproj/Main.storyboard
+++ b/Whats The Weather/Base.lproj/Main.storyboard
@@ -1,26 +1,84 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16C41b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Whats_The_Weather" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="bottomRight" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image_for_app.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="JLl-k7-hnn"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Whats The Weather" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DuX-Bk-xNM">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="NM5-Ci-FcX"/>
+                                    <constraint firstAttribute="width" constant="192" id="TKH-YL-VdN"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="E.g In Delhi, New York" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OB2-hc-uRg">
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GtM-La-34s">
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <state key="normal" title="Check"/>
+                                <connections>
+                                    <action selector="weatherCheck:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7Yg-qL-S1o"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="EzV-UP-ynG">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="151" id="XHa-A5-iUq"/>
+                                    <constraint firstAttribute="width" constant="288" id="jdn-X7-IoU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="OB2-hc-uRg" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="0i3-SD-MTI"/>
+                            <constraint firstItem="JLl-k7-hnn" firstAttribute="top" secondItem="DuX-Bk-xNM" secondAttribute="bottom" constant="-58" id="4df-jW-GXq"/>
+                            <constraint firstItem="EzV-UP-ynG" firstAttribute="top" secondItem="GtM-La-34s" secondAttribute="bottom" constant="17" id="Htt-JR-dy7"/>
+                            <constraint firstItem="OB2-hc-uRg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Qr5-Yr-89F"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="JLl-k7-hnn" secondAttribute="bottom" id="ROf-10-yuL"/>
+                            <constraint firstItem="GtM-La-34s" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="T8a-gR-DGm"/>
+                            <constraint firstItem="GtM-La-34s" firstAttribute="top" secondItem="OB2-hc-uRg" secondAttribute="bottom" constant="37" id="UBK-Fb-i4p"/>
+                            <constraint firstItem="OB2-hc-uRg" firstAttribute="top" secondItem="DuX-Bk-xNM" secondAttribute="bottom" constant="32" id="cU9-wJ-pJy"/>
+                            <constraint firstAttribute="trailing" secondItem="JLl-k7-hnn" secondAttribute="trailing" id="fNM-cq-AC9"/>
+                            <constraint firstItem="DuX-Bk-xNM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gNR-LI-ODs"/>
+                            <constraint firstItem="JLl-k7-hnn" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="kS7-dG-y3f"/>
+                            <constraint firstItem="EzV-UP-ynG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vqs-tx-Uor"/>
+                            <constraint firstItem="JLl-k7-hnn" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="wdw-48-N3P"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="city" destination="OB2-hc-uRg" id="xoG-8A-LDX"/>
+                        <outlet property="discription" destination="EzV-UP-ynG" id="Enn-CY-eXf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-80.625" y="138.38028169014083"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="image_for_app.jpg" width="900" height="600"/>
+    </resources>
 </document>
